Версия 0.10.20. Добавлены дженерики, аннотация Override; исправлено множество багов, связанных с переменными, границами цикла, и множество мелких багов